docs: expand to 1.17-26.3 NO MERCY banner, single-jar ultra-mode, JVM arg for SIMD
Co-authored-by: arena-agent <297053741+arena-agent@users.noreply.github.com>